devops/projects/202-dockerization-bookstore-api-on-python-flask-mysql/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: Cloudformation template for project 202
  
Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH Connection.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be one of the existing KepPairs 
  
Resources:
  WebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP and SSH for Bookstore Web API #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServer:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-0c94855ba95c71c99
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !GetAtt WebServerSecurityGroup.GroupId
      Tags:
        - 
          Key: Name
          Value: !Sub Project 202 Webserver of ${AWS::StackName}
      UserData:
        Fn::Base64: |
          #! /bin/bash
          yum update -y
          amazon-linux-extras install docker -y
          systemctl start docker
          systemctl enable docker
          usermod -a -G docker ec2-user
          curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
          -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose
          TOKEN="2bf83eda6abe858c76a746ed999d5a52dbcf5466"
          FOLDER="https://$TOKEN@https://raw.githubusercontent.com/belkiskara/aws-workshop/master/devops/projects/202-dockerization-bookstore-api-on-python-flask-mysql/"
          curl -s --create-dirs -o "/home/ec2-user/bookstore-api/bookstore-api.py" -L "$FOLDER"bookstore-api.py
          curl -s --create-dirs -o "/home/ec2-user/bookstore-api/requirements.txt" -L "$FOLDER"requirements.txt
          curl -s --create-dirs -o "/home/ec2-user/bookstore-api/Dockerfile" -L "$FOLDER"Dockerfile
          curl -s --create-dirs -o "/home/ec2-user/bookstore-api/docker-compose.yml" -L "$FOLDER"docker-compose.yml
          cd /home/ec2-user/bookstore-api
          docker build -t callahanclarus/bookstore-api:latest .
          docker-compose up -d

Outputs:
  WebsiteURL:
    Description: Bookstore Web API URL
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServer.PublicDnsName
